style: metdologies and frameworks

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,8 @@ import PersonalProjects from "../components/sections/PersonalProjects.astro";
 import ImmersiveExperiences from "../components/sections/ImmersiveExperiences.astro";
 import FrontendContributions from "../components/sections/FrontendContributions.astro";
 import ProfessionalExperience from "../components/sections/ProfessionalExperience.astro";
-import ProjectManagementTools from "../components/sections/ProjectManagementTools.astro";
+import ToolsCarousel from "../components/sections/ToolsCarousel.astro";
+import ProjectManagement from "../components/sections/ProjectManagement.astro";
 import Education from "../components/sections/Education.astro";
 import Community from "../components/sections/Community.astro";
 import Contact from "../components/sections/Contact.astro";
@@ -37,7 +38,10 @@ import Contact from "../components/sections/Contact.astro";
    <ProfessionalExperience />
 
    <!-- Herramientas de Gestión -->
-   <ProjectManagementTools />
+   <ToolsCarousel />
+
+   <!-- Gestión de proyectos-->
+   <ProjectManagement />
 
    <!-- Educación -->
    <Education />
